[package]
name = "hstatus"
version = "0.1.0"
authors = ["Humaid AlQassimi <git@humaidq.ae>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = { version = "2.18.2", features = ["xlib"] }
chrono = "0.4"
libc = "0.2.68"
